<resources>
    <string name="app_name">FutureClock</string>

    <string name="ok_button_text">OK</string>
    <string name="voice_button_text">Play</string>
    <string name="alarm_button_text">Add</string>

    <string name="item_alarm_active_checkbox">Active</string>
    <string name="alarm_switch">Enable</string>
    <string name="alarm_confirm_button">Confirm</string>

    <string name="alarm_delete_dialog_title">Delete Alarm</string>
    <string name="alarm_delete_dialog_message">Delete this alarm?</string>

    <!-- Days in short -->
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>

    <string name="settings">Settings</string>
    <string name="weather_preferences">Weather Settings</string>
    <string name="location_hint_settings">Insert a location name</string>

</resources>
