<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mariotti.developer.futureclock.activities.AlarmActivity"
    >

    <TextView
        android:id="@+id/alarm_time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:textColor="@color/colorPrimary"
        android:textSize="100sp"
        tools:text="00:00" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/alarm_textview_mon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elegantTextHeight="false"
            android:gravity="center"
            android:lines="2"
            android:text="@string/monday"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/grey"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/alarm_textview_tue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:lines="2"
            android:text="@string/tuesday"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/grey"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/alarm_textview_wed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:lines="2"
            android:text="@string/wednesday"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/grey"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/alarm_textview_thu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:lines="2"
            android:text="@string/thursday"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/grey"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/alarm_textview_fri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:lines="2"
            android:text="@string/friday"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/grey"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/alarm_textview_sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:lines="2"
            android:text="@string/saturday"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/grey"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/alarm_textview_sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:lines="2"
            android:text="@string/sunday"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/grey"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/alarm_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_confirm_button"
            android:layout_gravity="left"
            />

        <Switch
            android:id="@+id/alarm_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:gravity="right|center"
            android:padding="16dp" />
    </LinearLayout>
</LinearLayout>
